<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            style="@android:attr/textAppearanceMedium"
            android:text="@string/setting_ip_address"
            />
        <EditText
            android:id="@+id/ip_et"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:singleLine="true"
            style="@android:attr/textAppearanceMedium"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            style="@android:attr/textAppearanceMedium"
            android:text="@string/setting_ports"
            />
        <EditText
            android:id="@+id/port_et"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:singleLine="true"
            style="@android:attr/textAppearanceMedium"
            android:inputType="number"
            />
    </LinearLayout>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="8dp"
        android:text="@string/btn_save"
        android:textColor="#f7f7f7"
        android:textSize="16sp"
        android:enabled="true"
        />
</LinearLayout>
